<resources>
    <string name="app_name">MarkMe</string>
    <string name="usernameHint">Username:</string>
    <string name="passwordHint">Password:</string>
    <string name="loginText">Log In</string>
    <string name="signupText">Sign Up</string>
    <string name="signupPrompt">Please enter the required information to register an account:</string>
    <string name="femaleText">Female</string>
    <string name="maleText">Male</string>
    <string name="emailHint">Email: example@domain.com</string>
    <string name="phoneHint">Phone: XXX-XXX-XXXX</string>
    <string name="accountSettingsText">Account Information:</string>
    <string name="contactInformationText">Contact Information:</string>
    <string name="editContactInfoText">Edit Contact Information</string>
    <string name="resetPasswordText">Reset Password</string>
    <string name="saveText">Save</string>
    <string name="usernameSignupHint">Username: Enter at least 8 characters.</string>
    <string name="capture">Take a Photo</string>
    <string name="ToggleCameraView">Toggle the camera view</string>
    <string name="faceView">FACE</string>
    <string name="frontView">FRONT</string>
    <string name="add_text">add</string>
    <string name="search_text">search</string>
    <string name="empty_textview">List Title</string>
    <string name="info_text">Details</string>
    <string name="keyword_text">Filter</string>
    <string name="show_text">Show</string>
    <string name="hide_text">Hide</string>
    <string name="ProblemCreationTitle">Create a problem</string>
    <string name="ProblemCreationTitleText">Title (max. 30 characters)</string>
    <string name="ProblemCreationDescription">Enter description</string>
    <string name="save_button">SAVE</string>
    <string name="DateTime">HH:MM</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="title_settings">Settings</string>
    <string name="title_GPS">GPS</string>
    <string name="title_Body">Body</string>
    <string name="title_Gallery">Gallery</string>
    <string name="title_List">List</string>
    <string name="overlay_description">overlay</string>
    <string name="touch_a_location">Touch a Location</string>
    <string name="total">Total:</string>
    <string name="not_listed">Not Listed:</string>
    <string name="please_choose_a_language">Please Choose a Language:</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="about">About</string>
    <string name="copyright">MarkMe Copyright 2018</string>
    <string name="creaters">Created by \n Vishal, Rizwan, Curtis, Dorsa, and Jose</string>
    <string name="language_settings">Language</string>
    <string name="account">Account</string>
    <string name="about_settings">About</string>
    <string name="weekly">Weekly</string>
    <string name="bi_weekly">Bi-weekly</string>
    <string name="monthly">Monthly</string>
    <string name="set_reminder">Set Reminder:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="set_time">Set Time:</string>
    <string name="slash">/</string>
    <string name="semiColon">;</string>
    <string name="colon">:</string>
    <string name="user_assignment_settings">User Assignments</string>
    <string name="user_assignment_assigned_list">This is a list of assignment users.</string>
    <string name="user_assignment_remove">Remove</string>
    <string name="user_assignment_select_list">Search and select user to view progress.</string>
    <string name="user_assignment_generateButton">Generate</string>
    <string name="user_assignment_checkButton">Check Patient</string>
    <string name="add_button">Add</string>
    <string name="search_button">Search</string>
    <string name="filter_edit_text">Enter keyword here</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="channel_name">channelName</string>
    <string name="channel_description">channelDesc</string>
    <string name="set_a_notification_reminder">Set a notification Reminder</string>
    <string name="daily">Daily</string>
    <string name="every_other_day">Every other day</string>
    <string name="delete">Delete</string>
    <string name="preference_file_key">com.cybersix.markme.history</string>
    <string name="change_lang_text">Select Your Language</string>
    <string name="DontHaveAccountPromp">First time here? Sign up now!</string>
    <string name="transfer_account_text">Transfer Account</string>
    <string name="transferAccountPrompt">To transfer an account, enter a shortcode below:</string>
    <string name="enterPrompt">Enter</string>
    <string name="generatePrompt" >Generate</string>
    <string name="generateTransferCodePrompt">Generate a transfer code below:</string>
    <string name="registration_failure">Registration Failed!</string>
    <string name="transfer_account_success">Transfer Successful!</string>
    <string name="transfer_account_failure">Transfer failed.</string>
    <string name="signup_anways_prompt">Sign In Offline</string>
    <string name="logging_in_assurance">Logging you in...</string>
    <string name="record_description">Record Description:</string>
    <string name="record_name">Record Name:</string>
    <string name="cancel">Cancel</string>
    <string name="add_record">Add Record</string>
    <string name="unlisted">Unlisted:</string>
    <string name="description">Description</string>
    <string name="location">Location:</string>
    <string name="record_information">Record Information</string>
    <string name="view_location">View Location</string>
    <string name="save_changes">Save Changes</string>
    <string name="comment">Comment</string>
    <string name="view_photos">View Photos</string>
    <string name="add_photo">Add Photo</string>
    <string name="body_location">Body Location</string>
    <string name="About_mark_me">About MarkMe</string>
    <string name="total_frag_name">Total:</string>
    <string name="unlisted_frag_name">Unlisted:</string>
    <string name="list_of_prob">List of Problems</string>
    <string name="recorf_info">Record Info</string>
    <string name="assign_myself">Assign Myself</string>
</resources>
