<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AccountSettingsFragment">

    <include
        android:id="@+id/fragment_titlebar"
        layout="@layout/fragment_title_bar"
        android:layout_width="0dp"
        android:layout_height="@dimen/titlebar_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragment_account_settings_phoneText"
        android:layout_width="335dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/phoneHint"
        android:inputType="text"
        android:selectAllOnFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_email" />

    <TextView
        android:id="@+id/fragment_account_settings_contactInfoTextView"
        android:layout_width="335dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/contactInformationText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_resetPasswordButton" />

    <TextView
        android:id="@+id/fragment_account_settings_accountInfoTextView"
        android:layout_width="335dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/accountSettingsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_titlebar" />

    <EditText
        android:id="@+id/fragment_account_settings_email"
        android:layout_width="335dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_contactInfoTextView" />

    <Button
        android:id="@+id/fragment_account_settings_editContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/editContactInfoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_phoneText" />

    <Button
        android:id="@+id/fragment_account_settings_saveButton"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/saveText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_phoneText" />

    <Button
        android:id="@+id/fragment_account_settings_resetPasswordButton"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/resetPasswordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_titlebar" />

    <LinearLayout
        android:id="@+id/fragment_account_settings_titlebar"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_accountInfoTextView">

        <TextView
            android:id="@+id/fragment_account_settings_usernamePromptText"
            android:layout_width="10dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/usernameHint"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="67dp" />

        <TextView
            android:id="@+id/fragment_account_settings_usernameText"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="2"
            android:text="Username" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>