<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        layout="@layout/fragment_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:layout_weight="1" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment"
    android:weightSum="8"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/about"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/creaters"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>

</android.support.constraint.ConstraintLayout>