<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_activity">

    <Button
        android:id="@+id/signupButton"
        android:layout_width="119dp"
        android:layout_height="62dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="28dp"
        android:text="@string/signupText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signinAnwaysButton"
        android:layout_width="119dp"
        android:layout_height="62dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/signup_anways_prompt"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="354dp"
        android:layout_height="248dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/logo_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signupPromptText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/DontHaveAccountPromp"
        app:layout_constraintBottom_toTopOf="@+id/signupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/activity_login_assurance"
        android:layout_width="180dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/logging_in_assurance"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/signupPromptText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

</android.support.constraint.ConstraintLayout>