<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageHandler"
    android:weightSum="8"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/please_choose_a_language"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/english"
        android:layout_weight="1"
        android:onClick="english"
        app:layout_constraintStart_toEndOf="@+id/titleTextView" />
    <Button
        android:id="@+id/Account"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/french"
        android:layout_weight="1"
        android:onClick="french"
        app:layout_constraintStart_toEndOf="@+id/titleTextView" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>



    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"

        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />
</LinearLayout>